--- a/notebook/datamodule.ipynb
+++ b/notebook/datamodule.ipynb
@@ -27,8 +27,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataloader = AirogsDataModule(image_folder_path=\"/home/students/tyang/yolov5/runs/detect/exp5/crops/od\",\n",
-    "                              csv_file_path=\"/home/students/tyang/airogs/train_labels.csv\",\n",
+    "dataloader = AirogsDataModule(image_folder_path=\"/home/students/tyang/yolov5/runs/detect/cat0/crops/od\",\n",
+    "                              rg_folder_path=\"/home/students/tyang/yolov5/runs/detect/RG_images/crops/od\",\n",
+    "                              image_csv_path=\"/home/students/tyang/airogs/train_labels.csv\",\n",
+    "                              rg_csv_path=\"/home/students/tyang/yolov5/runs/detect/RG_images/crops/rg.csv\",\n",
     "                              train_batch_size=32, \n",
     "                              test_batch_size=32, \n",
     "                              num_workers=8)\n",
@@ -43,7 +45,7 @@
     {
      "data": {
       "text/plain": [
-       "14383"
+       "5227"
       ]
      },
      "execution_count": 4,
@@ -83,8 +85,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([3, 512, 512])\n",
-      "0\n"
+      "torch.Size([3, 380, 380])\n",
+      "tensor(1)\n"
      ]
     }
    ],
